components/crud-web-apps/trainingjobs/frontend/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kf-training-job-ui
  namespace: kubeflow
  labels:
    app: ml-platform
    component: frontend
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    # Centraldashboard iframe URL: /_/training-job/
    # - headers:
    #     request:
    #       add:
    #         x-forwarded-prefix: /training-job
    #   match:
    #     - uri:
    #         prefix: /_/training-job/
    #   rewrite:
    #     uri: /
    #   route:
    #     - destination:
    #         host: training-job-web-app-service.kubeflow.svc.cluster.local
    #         port:
    #           number: 80
    
    # Direct URL: /training-job/
    - headers:
        request:
          add:
            x-forwarded-prefix: /training-job
      match:
        - uri:
            prefix: /training-job/
      rewrite:
        uri: /
      route:
        - destination:
            host: training-job-web-app-service.kubeflow.svc.cluster.local
            port:
              number: 80
    
    # Backend API routes: /api/training-job/ -> /api/
    - match:
        - uri:
            prefix: /api/training-job/
      rewrite:
        uri: /api/
      route:
        - destination:
            host: ml-platform-backend.kubeflow.svc.cluster.local
            port:
              number: 8080
